# Metadata: Information about the package, used by package managers.
[metadata]
name = biosim

# Obtain version and author info from package,
# usually defined in __init__.py
version = attr: biosim.__version__
author = attr: biosim.__author__


# Provide description, long version picked up from file.
description = An island simulation with herbivores and carnivores
long_description = file: README.md
long_description_content_type = text/markdown

# Homepage for package and specific URLs
url = https://gitlab.com/nmbu.no/emner/inf200/h2021/january-teams/a03_vegard_lydia/biosim-a03-vegard-lydia
project_urls =
    Bug Tracker = https://gitlab.com/nmbu.no/emner/inf200/h2021/january-teams/a03_vegard_lydia/biosim-a03-vegard-lydia/-/issues

# License information
license = MIT License

# Classifiers, for options, see https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

# More information about requirements
[options]
# Python version required
python_requires = >=3.8

# Other packages required (eg numpy, pandas, ...)
# Do NOT list packages from the Python Standard Library
#    https://docs.python.org/3.9/library/index.html
install_requires =
        numpy
        matplotlib
        ffmpeg



# Which packages to include: tell packaging mechanism to search in src
package_dir =
    = src
packages = find:

# Scripts to also include in distribution package
scripts =

# Tell package-finding mechanism where to search
[options.packages.find]
where = src

# Tell our PEP8 checker that we allow 100 character lines
[flake8]
max-line-length = 100

# Other configuration information could follow here